质量检查结果优化